Some Visual changes to: * hr tag * h1 tag

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1>Welcome to the PDF merger for FREE!!</h1>
+        <hr class="belowh1">
     </header>
     
     <nav>
