--- a/src/index.html
+++ b/src/index.html
@@ -6,20 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PDF merger</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header>
         <h1>Welcome to the PDF merger for FREE!!</h1>
         <hr class="belowh1">
     </header>
-    
-    <nav>
-        <ul>
-            <li>Home</li>
-            <li>merge PDF</li>
-            <li>about</li>
-        </ul>
-    </nav>
+    <header>
+        <!-- <h1>Welcome!</h1> -->
+        <nav id="navbar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="">MergePDF</a></li>
+            </ul>
+        </nav>
+        <form>
+            <input type="search" class="Search" name="q" placeholder="Search query">
+            <input type="submit" value="Go!" class="SearchButton">
+        </form>
+    </header>
 
     <main>
         <p>
@@ -27,6 +33,14 @@
             <br>
             from the file selector menu
         </p>
+        <form action="/action_page.php">
+            <input type="file" id="myFile" name="filename">
+            <input type="submit">
+          </form>
+        <br>
+
+        you file is ready to download
+        <button class="btn"><i class="fa fa-download"></i> Download</button>
     </main>
 
     <footer>
