--- a/src/About.html
+++ b/src/About.html
@@ -28,8 +28,10 @@
     <div>
         This Project is a initiative for the Free PDF service
     </div>
-    <div>
-        Author: Dipankar Das
+    <div style="text-align: center;">
+        Developed by <br>
+        Dipankar Das,
+        Umang Bhalla
     </div>
 </body>
 </html>
