Creating the web site using go as host
Signed-off-by: Dipankar Das <dipsonu10@hotmail.com>

--- a/backEnd/web/index.html
+++ b/backEnd/web/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PDF merger</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./web/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -16,7 +16,7 @@
   <nav id="navbar">
     <ul>
       <li><a href="#">Home</a></li>
-      <li><a href="About.html">About</a></li>
+      <li><a href="./web/About.html">About</a></li>
     </ul>
   </nav>
 
@@ -26,14 +26,14 @@
 
     <div>
       Upload file 1
-      <form action="main.js" method="post">
+      <form action="./web/main.js" method="post">
         <caption>File 2</caption>
         <input type="file" class="file1">
         <input type="submit" class="Submit1">
       </form>
 
       Upload file 2
-      <form action="main.js" method="post">
+      <form action="./web/main.js" method="post">
         <caption>File 2</caption>
         <input type="file" class="file2">
         <input type="submit" class="Submit2">
