Removed the unnecessary code
Signed-off-by: Dipankar Das <dipsonu10@hotmail.com>

--- a/backEnd/web/About.html
+++ b/backEnd/web/About.html
@@ -21,7 +21,7 @@
 <body>
     <nav id="navbar">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="/app/web/index.html">Home</a></li>
           <li><a href="#">About</a></li>
         </ul>
       </nav>
