--- a/backEnd/web/index.html
+++ b/backEnd/web/index.html
@@ -21,24 +21,18 @@
   </nav>
 
   <main>
-    <!-- you file is ready to download
-    <button class="btn"><i class="fa fa-download"></i> Download</button> -->
 
-    <div>
-      Upload file 1
-      <form action="/app/web/main.js" method="post">
-        <caption>File 2</caption>
-        <input type="file" class="file1">
-        <input type="submit" class="Submit1">
-      </form>
+    <form enctype="multipart/form-data" action="http://localhost:8080/upload" method="post">
+      <caption>File 1</caption>
+      <input type="file" name="myFile" />
+      <input type="submit" value="upload" />
+    </form>
 
-      Upload file 2
-      <form action="/app/web/main.js" method="post">
-        <caption>File 2</caption>
-        <input type="file" class="file2">
-        <input type="submit" class="Submit2">
-      </form>
-    </div>
+    <form enctype="multipart/form-data" action="http://localhost:8080/upload" method="post">
+      <caption>File 2</caption>
+      <input type="file" name="myFile" />
+      <input type="submit" value="upload" />
+    </form>
   </main>
 
   <footer>
