--- a/backEnd/web/About.html
+++ b/backEnd/web/About.html
@@ -21,8 +21,8 @@
 <body>
     <nav id="navbar">
         <ul>
-          <li><a href="/app/web/index.html">Home</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/html/about">About</a></li>
         </ul>
       </nav>
     <div>
