--- a/backEnd/web/About.html
+++ b/backEnd/web/About.html
@@ -5,18 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <style>
-        body {
-            background: #9198e5;
-        }
-        div {
-            text-align: center;
-            font-style: italic;
-            color: rgb(244, 223, 191);
-            margin-left: 20%;
-            margin-right: 20%;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/styles">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <nav id="navbar">
@@ -25,13 +15,15 @@
           <li><a href="/html/about">About</a></li>
         </ul>
       </nav>
-    <div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p style="text-align: center;font-family: 'Poppins', sans-serif; font-weight: bold; line-height: 2rem; font-size:1.3rem; color: white; padding: 15px; ">
         This Project is a initiative for the Free PDF service
-    </div>
-    <div style="text-align: center;">
-        Developed by <br>
-        Dipankar Das,
-        Umang Bhalla
-    </div>
+        <br>Developed by <br>
+        Dipankar Das, Umang Bhalla
+    </p>
 </body>
 </html>
