Styling for the main page

--- a/backEnd/web/index.html
+++ b/backEnd/web/index.html
@@ -56,6 +56,9 @@
   <footer>
     Thanks for visiting to our page
   </footer>
+  <script>
+    // using internal JS
+  </script>
 </body>
 
 </html>
