Started to connect the 2 frontend and backend

--- a/src/frontend/About.html
+++ b/src/frontend/About.html
@@ -23,7 +23,7 @@
     <p style="text-align: center;font-family: 'Poppins', sans-serif; font-weight: bold; line-height: 2rem; font-size:1.3rem; color: white; padding: 15px; ">
         This Project is a initiative for the Free PDF service
         <br>Developed by <br>
-        Dipankar Das, Umang Bhalla
+        Dipankar Das
     </p>
 </body>
 </html>
