--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -22,16 +22,17 @@
 
   <main>
 
-    <form enctype="multipart/form-data" action="http://localhost:8080/upload" method="POST">
+    <form enctype="multipart/form-data" action="http://backend.pdf-editor-ns/upload" method="POST">
       <caption>File Uploader</caption>
       <input type="file" name="myFile" />
       <input type="submit" value="upload" />
     </form>
-    <a href="http://localhost:8080/pdf/clear">
+    <a href="http://backend.pdf-editor-ns/pdf/clear">
+      <!-- Calling BACKEND -->
       <button type="button">CLEAR</button>
     </a>
     <br>
-    <a href="http://localhost:8080/downloads" download>
+    <a href="http://backend.pdf-editor-ns/downloads" download>
       <button type="button">DOWNLOAD</button>
     </a>
     </form>
