[Major Bug] (*Fixed*) Web UI

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -13,11 +13,9 @@
 
 <body class="container">
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-    </div>
     <div class="container-fluid">
       <a class="navbar-brand" href="#">PDF Editor</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -75,8 +73,6 @@
     <br>
     <br>
 
-   
-
     <div class="alert alert-danger d-flex align-items-center" role="alert">
       <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
         <use xlink:href="#exclamation-triangle-fill" />
@@ -120,6 +116,9 @@
       <p class="text-center text-muted">© 2022 Projects</p>
     </footer>
   </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+
   <script>
     function fileValidation() {
       var fileInput =
