Standardise for blog post
Signed-off-by: Dipankar Das <dipsonu10@hotmail.com>

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -14,7 +14,7 @@
 <body class="container">
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">PDF Editor</a>
+      <a class="navbar-brand" href="#">PDF Editor Beta</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
