--- a/src/frontend/index-merge.html
+++ b/src/frontend/index-merge.html
@@ -5,17 +5,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PDF Editor</title>
+  <title>PDF Merger</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" defer></script>
 </head>
 
 <body class="container">
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fdfce3;">
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">PDF Editor Beta</a>
+      <a class="navbar-brand" href="#">PDF Merge Beta</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -55,20 +54,69 @@
       </symbol>
     </svg>
     <br>
+    <div class="alert alert-info" role="alert">
+      <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:">
+        <use xlink:href="#check-circle-fill" />
+      </svg>
+
+      Merge More than 2 PDFs(comming soon..)
+    </div>
+
+    <form id="form" class="card m-5 mx-auto p-5" enctype="multipart/form-data" action="merge/upload" method="POST">
+      <div class="mb-3">
+        <caption>File Uploader</caption>
+        <input id="myFile" class="form-control" type="file" onchange="return fileValidation()" name="myFile" />
+      </div>
+      <input type="submit" class="btn btn-info" value="upload" />
+    </form>
+    <a href="merge/clear">
+      <button class="btn btn-outline-danger" type="button">CLEAR</button>
+    </a>
+    <br>
+    <br>
+    <a href="merge/download" download>
+      <button class="btn btn-outline-success" type="button">DOWNLOAD</button>
+    </a>
+    </form>
+
+    <br>
+    <br>
+
     <div class="alert alert-danger d-flex align-items-center" role="alert">
       <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
         <use xlink:href="#exclamation-triangle-fill" />
       </svg>
       <div>
-        This Site is under 🚧
+        After you have done please click CLEAR button to remove all the files you have uploaded
       </div>
     </div>
 
     <br>
+    <div class="alert alert-primary d-flex align-items-center" role="alert">
+      <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Info:">
+        <use xlink:href="#info-fill" />
+      </svg>
+      <div>
+        You need to comeback to home page after each pdf upload
+      </div>
+    </div>
+    <div class="alert alert-primary d-flex align-items-center" role="alert">
+      <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Info:">
+        <use xlink:href="#info-fill" />
+      </svg>
+      <div>Only 2 pdfs are allowed to be merged</div>
+    </div>
+
+    <div class="alert alert-primary d-flex align-items-center" role="alert">
+      <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Info:">
+        <use xlink:href="#info-fill" />
+      </svg>
+      <div>After you have done press download button to get merged pdf</div>
+    </div>
 
   </main>
 
-  <div class="container " style="background-color: #fdfce3;">
+  <div class="container " style="background-color: #e3f2fd;">
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
@@ -78,9 +126,42 @@
       </ul>
       <p class="text-center text-muted">© 2022 Projects</p>
     </footer>
-  </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 
+    <script>
+      function fileValidation() {
+        var fileInput =
+          document.getElementById('myFile');
+
+        var filePath = fileInput.value;
+
+        // Allowing file type
+        var allowedExtensions =
+          /(\.pdf)$/i;
+
+        if (!allowedExtensions.exec(filePath)) {
+          alert('Invalid file type');
+          fileInput.value = '';
+          return false;
+        }
+        else {
+
+          // Image preview
+          if (fileInput.files && fileInput.files[0]) {
+            var reader = new FileReader();
+            reader.onload = function (e) {
+              document.getElementById(
+                'imagePreview').innerHTML =
+                '<img src="' + e.target.result
+                + '"/>';
+            };
+
+            reader.readAsDataURL(fileInput.files[0]);
+          }
+        }
+      }
+    </script>
 </body>
 
 </html>
