--- a/src/frontend/index-rotate.html
+++ b/src/frontend/index-rotate.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PDF Editor</title>
+  <title>PDF Rotator</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -15,7 +15,7 @@
 <body class="container">
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fdfce3;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">PDF Editor Beta</a>
+      <a class="navbar-brand" href="#">PDF Rotate Beta</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -65,7 +65,6 @@
     </div>
 
     <br>
-
   </main>
 
   <div class="container " style="background-color: #fdfce3;">
@@ -78,9 +77,41 @@
       </ul>
       <p class="text-center text-muted">© 2022 Projects</p>
     </footer>
-  </div>
 
 
+    <script>
+      function fileValidation() {
+        var fileInput =
+          document.getElementById('myFile');
+
+        var filePath = fileInput.value;
+
+        // Allowing file type
+        var allowedExtensions =
+          /(\.pdf)$/i;
+
+        if (!allowedExtensions.exec(filePath)) {
+          alert('Invalid file type');
+          fileInput.value = '';
+          return false;
+        }
+        else {
+
+          // Image preview
+          if (fileInput.files && fileInput.files[0]) {
+            var reader = new FileReader();
+            reader.onload = function (e) {
+              document.getElementById(
+                'imagePreview').innerHTML =
+                '<img src="' + e.target.result
+                + '"/>';
+            };
+
+            reader.readAsDataURL(fileInput.files[0]);
+          }
+        }
+      }
+    </script>
 </body>
 
 </html>
