--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="container">
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fdfce3;">
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">PDF Editor Beta</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -40,35 +40,38 @@
   </nav>
 
   <main>
-    <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-      <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
-        <path
-          d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
-      </symbol>
-      <symbol id="info-fill" fill="currentColor" viewBox="0 0 16 16">
-        <path
-          d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z" />
-      </symbol>
-      <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
-        <path
-          d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
-      </symbol>
-    </svg>
+
     <br>
-    <div class="alert alert-danger d-flex align-items-center" role="alert">
-      <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
-        <use xlink:href="#exclamation-triangle-fill" />
-      </svg>
-      <div>
-        This Site is under 🚧
+    <br>
+    <div class="row">
+      <div class="col-sm-6">
+        <a href="/merger">
+          <div class="card text-bg-info" style="background-color: #e3f2fd;">
+            <div class="card-header">Merge PDFs</div>
+            <img src="./resources/Untitled-2022-08-02-1628.excalidraw.svg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Lets Merge PDFs</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-sm-6">
+        <a href="/rotator">
+          <div class="card text-bg-info" style="background-color: #e3f2fd;">
+            <div class="card-header">Rotate PDFs</div>
+            <img src="./resources/Untitled-2022-08-02-1629.excalidraw.svg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Lets Rotate PDFs</p>
+            </div>
+          </div>
+        </a>
       </div>
     </div>
-
     <br>
-
   </main>
 
-  <div class="container " style="background-color: #fdfce3;">
+  <div class="container " style="background-color: #e3f2fd;">
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
