Fixed the img problem created endpoints for each image

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -48,7 +48,7 @@
         <a href="/merger">
           <div class="card text-bg-info" style="background-color: #e3f2fd;">
             <div class="card-header">Merge PDFs</div>
-            <img src="./resources/Untitled-2022-08-02-1628.excalidraw.svg" class="card-img-top" alt="...">
+            <img src="/home-img01" class="card-img-top" alt="merge img">
             <div class="card-body">
               <p class="card-text">Lets Merge PDFs</p>
             </div>
@@ -60,7 +60,7 @@
         <a href="/rotator">
           <div class="card text-bg-info" style="background-color: #e3f2fd;">
             <div class="card-header">Rotate PDFs</div>
-            <img src="./resources/Untitled-2022-08-02-1629.excalidraw.svg" class="card-img-top" alt="...">
+            <img src="/home-img02" class="card-img-top" alt="rotate img">
             <div class="card-body">
               <p class="card-text">Lets Rotate PDFs</p>
             </div>
