--- a/src/frontend/index-rotate.html
+++ b/src/frontend/index-rotate.html
@@ -75,6 +75,7 @@
         <li class="nav-item"><a href="/merger" class="nav-link px-2 text-muted">Merge</a></li>
         <li class="nav-item"><a href="/rotator" class="nav-link px-2 text-muted">Rotate</a></li>
       </ul>
+      <p class="text-center text-muted">PDF-Rotator:v0.1</p>
       <p class="text-center text-muted">© 2022 Projects</p>
     </footer>
 
