--- a/src/frontend/index-merge.html
+++ b/src/frontend/index-merge.html
@@ -72,46 +72,46 @@
           <input id="myFile2" class="form-control" type="file" name="myFile" onchange="return fileValidation()" multiple />
           <div id="imagePreview2"></div>
         </div>
-        <input type="submit" class="btn btn-info" value="upload & download"/>
+        <input type="submit" class="btn btn-info" value="Merge"/>
       </form>
-    <a href="/merge/clear">
-      <button class="btn btn-outline-danger" type="button">CLEAR</button>
+    <a href="#">
+      <button class="btn btn-outline-danger" type="button" disabled>CLEAR</button>
     </a>
 
     <br>
     <br>
 
-    <div class="alert alert-danger d-flex align-items-center" role="alert">
+    <!-- <div class="alert alert-danger d-flex align-items-center" role="alert">
       <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
         <use xlink:href="#exclamation-triangle-fill" />
       </svg>
       <div>
         After you have done please click CLEAR button to remove all the files you have uploaded
       </div>
-    </div>
+    </div> -->
 
     <br>
-    <div class="alert alert-primary d-flex align-items-center" role="alert">
+    <!-- <div class="alert alert-primary d-flex align-items-center" role="alert">
       <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Info:">
         <use xlink:href="#info-fill" />
       </svg>
       <div>
         You need to comeback to home page after each pdf upload
       </div>
-    </div>
+    </div> -->
     <div class="alert alert-primary d-flex align-items-center" role="alert">
       <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Info:">
         <use xlink:href="#info-fill" />
       </svg>
       <div>Only 2 pdfs are allowed to be merged</div>
     </div>
-
+<!--
     <div class="alert alert-primary d-flex align-items-center" role="alert">
       <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Info:">
         <use xlink:href="#info-fill" />
       </svg>
       <div>After you have done press download button to get merged pdf</div>
-    </div>
+    </div> -->
 
   </main>
 
@@ -119,9 +119,9 @@
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-        <li class="nav-item"><a href="/about" class="nav-link px-2 text-muted">About</a></li>
         <li class="nav-item"><a href="/merger" class="nav-link px-2 text-muted">Merge</a></li>
         <li class="nav-item"><a href="/rotator" class="nav-link px-2 text-muted">Rotate</a></li>
+        <li class="nav-item"><a href="/about" class="nav-link px-2 text-muted">About</a></li>
       </ul>
       <p class="text-center text-muted">PDF-Merger:v0.8</p>
       <p class="text-center text-muted">© 2022 Dipankar</p>
