--- a/src/frontend/index-rotate.html
+++ b/src/frontend/index-rotate.html
@@ -71,9 +71,9 @@
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-        <li class="nav-item"><a href="/about" class="nav-link px-2 text-muted">About</a></li>
         <li class="nav-item"><a href="/merger" class="nav-link px-2 text-muted">Merge</a></li>
         <li class="nav-item"><a href="/rotator" class="nav-link px-2 text-muted">Rotate</a></li>
+        <li class="nav-item"><a href="/about" class="nav-link px-2 text-muted">About</a></li>
       </ul>
       <p class="text-center text-muted">PDF-Rotator:v0.1</p>
       <p class="text-center text-muted">© 2022 Projects</p>
@@ -104,8 +104,8 @@
             reader.onload = function (e) {
               document.getElementById(
                 'imagePreview').innerHTML =
-                '<img src="' + e.target.result
-                + '"/>';
+                '<br><iframe src="' + e.target.result
+                + '"></iframe><br>';
             };
 
             reader.readAsDataURL(fileInput.files[0]);
