[Code, Test](Go)(Integration) Rotate and testing
- Rotate func now rotates all the pages
- removed the /clear endpoints from all services

Signed-off-by: Dipankar Das <dipsonu10@hotmail.com>

--- a/src/frontend/index-merge.html
+++ b/src/frontend/index-merge.html
@@ -14,7 +14,7 @@
 <body class="container">
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">PDF Merge Beta</a>
+      <a class="navbar-brand" href="#">PDF Merge Alpha</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -74,44 +74,14 @@
         </div>
         <input type="submit" class="btn btn-info" value="Merge"/>
       </form>
-    <a href="#">
-      <button class="btn btn-outline-danger" type="button" disabled>CLEAR</button>
-    </a>
 
     <br>
-    <br>
-
-    <!-- <div class="alert alert-danger d-flex align-items-center" role="alert">
-      <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
-        <use xlink:href="#exclamation-triangle-fill" />
-      </svg>
-      <div>
-        After you have done please click CLEAR button to remove all the files you have uploaded
-      </div>
-    </div> -->
-
-    <br>
-    <!-- <div class="alert alert-primary d-flex align-items-center" role="alert">
-      <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Info:">
-        <use xlink:href="#info-fill" />
-      </svg>
-      <div>
-        You need to comeback to home page after each pdf upload
-      </div>
-    </div> -->
     <div class="alert alert-primary d-flex align-items-center" role="alert">
       <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Info:">
         <use xlink:href="#info-fill" />
       </svg>
-      <div>Only 2 pdfs are allowed to be merged</div>
+      <div>Only 2 pdfs are allowed to be merged at a time</div>
     </div>
-<!--
-    <div class="alert alert-primary d-flex align-items-center" role="alert">
-      <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Info:">
-        <use xlink:href="#info-fill" />
-      </svg>
-      <div>After you have done press download button to get merged pdf</div>
-    </div> -->
 
   </main>
 
@@ -123,7 +93,7 @@
         <li class="nav-item"><a href="/rotator" class="nav-link px-2 text-muted">Rotate</a></li>
         <li class="nav-item"><a href="/about" class="nav-link px-2 text-muted">About</a></li>
       </ul>
-      <p class="text-center text-muted">PDF-Merger:v0.8</p>
+      <p class="text-center text-muted">PDF-Merger:v0.8-alpha</p>
       <p class="text-center text-muted">© 2022 Dipankar</p>
     </footer>
 
