[Test, UI](Unit)(Frontend) Fixed the Unit test
- Change the colour of the Editor main page
- added some info to the about page
- unit test fix

Signed-off-by: Dipankar Das <dipsonu10@hotmail.com>

--- a/src/frontend/About.html
+++ b/src/frontend/About.html
@@ -35,16 +35,16 @@
   <br>
   <div class="alert alert-success" role="alert">
     <h4 class="alert-heading">Thank you for using 🙏</h4>
-    <p>This Project is a initiative for the Free PDF service. </p>
+    <p>This Project is a initiative for the web PDF service also helps to get hands on with various CI/CD tools</p>
+  </p>
     <hr>
     <p class="mb-0">Developed by -> Dipankar Das</p>
+    <p class="mb-0">Contributors -> NIL</p>
+    <hr>
+    <p class="mb-0">
+      Source Code: <a href="https://github.com/dipankardas011/PDF-Editor">GITHUB LINK</a>
+    </p>
   </div>
-  <p
-    style="text-align: center;font-family: 'Poppins', sans-serif; font-weight: bold; line-height: 2rem; font-size:1.3rem; color: white; padding: 15px; ">
-    This Project is a initiative for the Free PDF service
-    <br>Developed by <br>
-    Dipankar Das
-  </p>
   <div class="container " style="background-color: #e3f2fd;">
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
