--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -13,9 +13,9 @@
 </head>
 
 <body class="container">
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3fde7;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">PDF Editor Beta</a>
+      <a class="navbar-brand" href="#">PDF Editor</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -58,7 +58,7 @@
 
       <div class="col-sm-6">
         <a href="/rotator">
-          <div class="card text-bg-info" style="background-color: #e3f2fd;">
+          <div class="card text-bg-info" style="background-color: #fdfce3;">
             <div class="card-header">Rotate PDFs</div>
             <img src="/home-img02" class="card-img-top" alt="rotate img">
             <div class="card-body">
@@ -71,13 +71,13 @@
     <br>
   </main>
 
-  <div class="container " style="background-color: #e3f2fd;">
+  <div class="container " style="background-color: #e3fde7;">
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-        <li class="nav-item"><a href="/about" class="nav-link px-2 text-muted">About</a></li>
         <li class="nav-item"><a href="/merger" class="nav-link px-2 text-muted">Merge</a></li>
         <li class="nav-item"><a href="/rotator" class="nav-link px-2 text-muted">Rotate</a></li>
+        <li class="nav-item"><a href="/about" class="nav-link px-2 text-muted">About</a></li>
       </ul>
       <p class="text-center text-muted">© 2022 Projects</p>
     </footer>
