[Rotator](Upgrade) Graduated from Beta -> Alpha
Signed-off-by: Dipankar Das <dipsonu10@hotmail.com>

--- a/src/frontend/index-rotate.html
+++ b/src/frontend/index-rotate.html
@@ -15,7 +15,7 @@
 <body class="container">
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fdfce3;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">PDF Rotate Beta</a>
+      <a class="navbar-brand" href="#">PDF Rotate Alpha</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -55,15 +55,7 @@
       </symbol>
     </svg>
     <br>
-    <div class="alert alert-danger d-flex align-items-center" role="alert">
-      <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
-        <use xlink:href="#exclamation-triangle-fill" />
-      </svg>
-      <div>
-        This Site is under 🚧
-      </div>
-    </div>
-    <br>
+
     <form id="form" class="card m-5 mx-auto p-5" enctype="multipart/form-data" action="/rotate/upload" method="POST">
       <div class="mb-3">
         <caption>File</caption>
