[Graduate](Frontend) alpha -> stable
Signed-off-by: Dipankar Das <dipsonu10@hotmail.com>

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -80,6 +80,7 @@
         <li class="nav-item"><a href="/about" class="nav-link px-2 text-muted">About</a></li>
       </ul>
       <p class="text-center text-muted">© 2022 Projects</p>
+      <p class="text-center text-muted">Version: 0.8</p>
     </footer>
   </div>
 
