--- a/src/frontend/index-rotate.html
+++ b/src/frontend/index-rotate.html
@@ -15,7 +15,7 @@
 <body class="container">
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fdfce3;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">PDF Rotate Alpha</a>
+      <a class="navbar-brand" href="#">PDF Rotate</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
