--- a/src/frontend/index-rotate.html
+++ b/src/frontend/index-rotate.html
@@ -15,7 +15,7 @@
 <body class="container">
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fdfce3;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">PDF Rotate</a>
+      <a class="navbar-brand" href="#">PDF Rotate 0.2-Beta</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -81,7 +81,7 @@
         <li class="nav-item"><a href="/rotator" class="nav-link px-2 text-muted">Rotate</a></li>
         <li class="nav-item"><a href="/about" class="nav-link px-2 text-muted">About</a></li>
       </ul>
-      <p class="text-center text-muted">PDF-Rotator:v0.1</p>
+      <p class="text-center text-muted">PDF-Rotator:v0.2-beta</p>
       <p class="text-center text-muted">© 2022 Projects</p>
     </footer>
 
