Getting ready for the final version release 1.0
Signed-off-by: Dipankar Das <dipsonu10@hotmail.com>

--- a/src/frontend/index-merge.html
+++ b/src/frontend/index-merge.html
@@ -14,7 +14,7 @@
 <body class="container">
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">PDF Merge 0.9-Beta</a>
+      <a class="navbar-brand" href="#">PDF Merge 1.0</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -93,7 +93,7 @@
         <li class="nav-item"><a href="/rotator" class="nav-link px-2 text-muted">Rotate</a></li>
         <li class="nav-item"><a href="/about" class="nav-link px-2 text-muted">About</a></li>
       </ul>
-      <p class="text-center text-muted">PDF-Merger:v0.9-beta</p>
+      <p class="text-center text-muted">PDF-Merger:v1.0</p>
       <p class="text-center text-muted">© 2022 Dipankar</p>
     </footer>
 
