--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -15,7 +15,7 @@
 <body class="container">
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3fde7;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">PDF Editor Beta</a>
+      <a class="navbar-brand" href="#">PDF Editor</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -80,7 +80,7 @@
         <li class="nav-item"><a href="/about" class="nav-link px-2 text-muted">About</a></li>
       </ul>
       <p class="text-center text-muted">© 2022 Projects</p>
-      <p class="text-center text-muted">Version: 0.9 Beta</p>
+      <p class="text-center text-muted">Version: 1.0</p>
     </footer>
   </div>
 
